--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <button id="btn">click</button>
+    <div>
+        <h2 id="h2"> click in the button</h2><br>
+        <button id="btn">click</button>
+    </div>
     <script src="app.js"></script>
 </body>
 </html>
