hello i do some modification in style

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>
+    <div id="pe">
+    <div id="pes">
         <div id="te">
         <h2>give me your name</h2>
         <input placeholder="Enter your name" id="txt" type="text">
@@ -18,6 +19,10 @@
         <p>hello</p>
         <p id="p"></p>
         </div>
+    </div>
+    <div id="test">
+
+    </div>
     </div>
     <script src="app.js"></script>
 </body>
