i do somme modifiction inn css and html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
     </div>
     <div id="test">
-
+        <h2>please to more information please check our email</h2>
     </div>
     </div>
     <script src="app.js"></script>
